syntax = "proto3";

option java_package = "com.avast.cactus.v3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message Data {
             string     field_string = 1;                   // REQUIRED
             int32      field_int_name = 2;                 // REQUIRED
             int32      field_option = 3;                   // OPTIONAL
    repeated string     field_strings = 4;                  // REQUIRED
    repeated string     field_strings_name = 5;             // REQUIRED
    repeated int32      field_option_integers = 6;          // OPTIONAL
    repeated int32      field_option_integers_empty = 7;    // OPTIONAL
             Data2      field_gpb_option = 8; 	            // OPTIONAL
             Data2      field_gpb_option_empty = 9;         // OPTIONAL
             Data2      field_gpb = 10;   		            // REQUIRED
             bytes      field_blob = 11;                    // REQUIRED
    repeated MapMessage field_map = 12;                     // OPTIONAL
    repeated int32      field_integers2 = 13;               // REQUIRED
    repeated MapMessage field_map2 = 14;                    // OPTIONAL
    repeated Data2      field_gpb_repeated = 15;            // OPTIONAL
    repeated Data3      field_gpb2_repeated_recurse = 16;   // OPTIONAL
             Data2      field_gpb2 = 17;   		            // REQUIRED
             Data5      field_gpb3 = 18;   		            // REQUIRED
}

message Data2 {
             double     field_double = 1;	  	            // REQUIRED
             bytes      field_blob = 2;	                    // REQUIRED
}

message Data3 {
    repeated Data2      field_gpb = 1;	  	                // REQUIRED

    oneof named_one_of2 {
             int32                      foo_int = 2;
             string                     foo_string = 3;
             bytes                      foo_bytes = 4;
             google.protobuf.Empty      foo_empty = 5;
    }
}

message Data4 {
             string                          field_string = 1;                   // REQUIRED
             google.protobuf.StringValue     field_option = 2;                   // OPTIONAL
             map<string, int32>              field_map = 3;                      // REQUIRED
             map<string, MapInnerMessage>    field_map2 = 4;                    // REQUIRED

             message MapInnerMessage {
                string     field_string = 1;
                string     field_int = 2;
             }
}


message Data5 {
    repeated Data2      field_gpb = 1;	  	                // REQUIRED

    oneof named_one_of {                                    // OPTIONAL
             int32      foo_int = 2;
             string     foo_string = 3;
    }
}

message MapMessage {
             string key = 1;                                // REQUIRED
             string value = 2;                              // REQUIRED
             string other = 3;                              // OPTIONAL
}

message ExtensionsMessage {
             google.protobuf.BoolValue bool_value = 1;
             google.protobuf.Int32Value int32_value = 2;
             google.protobuf.Int64Value int64_value = 3;
             google.protobuf.FloatValue float_value = 4;
             google.protobuf.DoubleValue double_value = 5;
             google.protobuf.StringValue string_value = 6;
             google.protobuf.BytesValue bytes_value = 7;

             google.protobuf.Duration duration = 8;
             google.protobuf.Timestamp timestamp = 9;
             google.protobuf.ListValue list_value = 10;
             google.protobuf.ListValue list_value2 = 11;
             google.protobuf.ListValue list_value3 = 12;
             google.protobuf.ListValue list_value4 = 13;

             google.protobuf.Struct struct = 14;

             google.protobuf.Any any = 15;
}

message MessageInsideAnyField {
             string     field_string = 1;
             int32      field_int = 2;
}

message MessageWithEnum {
    enum TheEnum {
        UNKNOWN = 0;
        ONE = 1;
        TWO = 2;
    }

    TheEnum the_enum_field = 1;                             // OPTIONAL
}

message MessageWithRawEnum {
    string   field_string = 1;                              // REQUIRED
    TestEnum field_enum = 2;                                // REQUIRED
    TestEnum field_enum_option = 3;                         // OPTIONAL

    map<string, TestEnum> field_map = 4;
}

enum TestEnum {
    UNKNOWN = 0;
    FIRST = 1;
    SECOND = 2;
}

message OptionalMessage {
    google.protobuf.Any elem = 1;
}

message MessageWithStringAndInt {
    string     field_string = 1;
    int32      field_int = 2;
}